configured tailwind dark theme

--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -18,6 +18,7 @@ const sizeClass =
     class={`container font-extrabold font-[Inter] tracking-tight text-white dark:text-white leading-none ${sizeClass} pt-10`}
   >
     <a href="/" aria-label="CalendHub Home">
-        calend<span class="text-orange-500">hub.</span>
+        <span class="text-black dark:text-white">calend</span>
+        <span class="text-orange-500">hub.</span>
     </a>
   </h1>
