--- a/src/pages/docs/zoom.astro
+++ b/src/pages/docs/zoom.astro
@@ -22,7 +22,7 @@ const steps = [
     description:
       "Once logged in, navigate to the Integrations page from your dashboard sidebar. Find and click the Zoom option to start the connection process.",
     icon: `<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-6 w-6"><path stroke-linecap="round" stroke-linejoin="round" d="M9.594 3.003L12 5.003L14.406 3.003C15.485 2.158 17.065 2.85 17.065 4.133v15.734c0 1.283-1.58 1.975-2.659 1.13L12 18.997l-2.406 2.006c-1.079.845-2.659.153-2.659-1.13V4.133c0-1.283 1.58-1.975 2.659-1.13z" /></svg>`,
-    image: "/1 (1).jpg",
+    image: "/1.png",
   },
   {
     number: "03",
@@ -30,15 +30,15 @@ const steps = [
     description:
       "You'll be redirected to Zoom's authorization page. Click Allow to grant Calendhub permission to access your Zoom account. This is necessary to automatically generate Zoom links for your appointments.",
     icon: `<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-6 w-6"><path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75L11.25 15L15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>`,
-    image: "/2 (1).jpg",
+    image: "/2.png",
   },
   {
     number: "04",
     title: "Create an Appointment with Zoom",
     description:
-      "Go to your Calendhub Calendar, click Create Appointment, then press More Options. From the Meeting Provider dropdown, select Zoom. Fill in your appointment details and click Save.",
+      "Go to your Calendhub Calendar, click Create Appointment, then press More Options. From the Meeting Provider dropdown, select Zoom. Fill in your appointment details and click Save.If you dont have other providers other than zoom than we will automaticlly use Zoom for creating meetings",
     icon: `<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-6 w-6"><path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5l-3.75 3.75M12 12l-3.75-3.75M12 6.375l-7.5 7.5a1.5 1.5 0 00-2.121 0l-1.879 1.879M21 12.75v-2.25a3.75 3.75 0 00-3.75-3.75H9.75a3.75 3.75 0 00-3.75 3.75v2.25M15.75 10.5v-3m0 0a3.75 3.75 0 00-3.75-3.75H9.75a3.75 3.75 0 00-3.75 3.75v3m0 0a3.75 3.75 0 00-3.75-3.75H3.75m0 0a3.75 3.75 0 00-3.75 3.75v2.25" /></svg>`,
-    image: "/3 (1).jpg",
+    image: "/4.png",
   },
   {
     number: "05",
@@ -46,7 +46,7 @@ const steps = [
     description:
       "After saving, reopen the appointment. You will now see a Join Zoom Meeting button. Clicking this button will take you directly to your Zoom meeting link.",
     icon: `<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-6 w-6"><path stroke-linecap="round" stroke-linejoin="round" d="M13.19 8.688a4.5 4.5 0 011.242 7.244l-4.5 4.5a3 3 0 01-4.243 0l-4.5-4.5a4.5 4.5 0 017.243-5.242l.52-.52z" /><path stroke-linecap="round" stroke-linejoin="round" d="M17.808 11.25a4.5 4.5 0 01-1.242-7.244l4.5-4.5a3 3 0 014.243 0l4.5 4.5a4.5 4.5 0 01-7.243 5.242l-.52.52z" /></svg>`,
-    image: "/4 (1).jpg",
+    image: "/3.png",
   },
 ];
 
