--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -5,16 +5,23 @@ export interface Props {
 
 const { size = 'lg' } = Astro.props;
 
-const sizeClass =
-  size === 'sm'
-    ? 'text-2xl'
-    : size === 'md'
-    ? 'text-4xl sm:text-5xl'
-    : 'text-[56px] sm:text-[64px]';
+const sizeMap = {
+  sm: 'h-16 w-16',
+  md: 'h-16 w-16',
+  lg: 'h-16 w-16',
+};
 
+const sizeClass = sizeMap[size];
 const paddingClass = size === 'sm' ? '' : 'pt-10';
 ---
 
-<div class={`font-extrabold font-[Inter] tracking-tight leading-none ${sizeClass} ${paddingClass}`}>
-  <span class="text-black dark:text-white">calend</span><span class="text-orange-500">hub.</span>
+<div class={`${paddingClass}`}>
+  <svg class={sizeClass} viewBox="0 0 900 957" xmlns="http://www.w3.org/2000/svg">
+    <g transform="translate(0, 957) scale(0.1, -0.1)" stroke="none">
+      <!-- h part - orange -->
+      <path fill="#f97316" d="M4107 7503 c-10 -9 -9 -3291 1 -3296 6 -5 107 93 727 702 321 315 383 364 550 436 55 23 313 23 394 -1 203 -59 342 -188 419 -389 54 -140 54 -152 61 -1100 l6 -880 434 -3 c239 -1 439 2 443 6 12 12 10 810 -2 1467 -10 533 -13 568 -57 725 -54 191 -169 403 -295 545 -216 243 -447 400 -688 468 -189 54 -175 52 -410 52 -187 0 -234 -3 -280 -18 -30 -10 -77 -25 -105 -33 -73 -24 -200 -87 -262 -131 -17 -13 -36 -23 -42 -23 -8 0 -11 207 -11 728 0 553 -3 731 -12 740 -9 9 -120 12 -438 12 -235 0 -430 -3 -433 -7z"/>
+      <!-- C part - black (white in dark mode via CSS) -->
+      <path class="fill-black dark:fill-white" d="M3265 6235 c-240 -23 -389 -65 -613 -172 -288 -138 -580 -412 -728 -683 -10 -19 -24 -42 -30 -50 -6 -8 -25 -51 -43 -95 -103 -250 -124 -368 -119 -670 4 -241 15 -310 75 -495 14 -41 128 -279 156 -325 43 -70 143 -194 221 -273 77 -80 234 -212 250 -212 3 0 24 -13 48 -29 99 -67 302 -159 433 -196 33 -9 75 -21 94 -27 80 -24 266 -38 521 -38 319 0 613 15 695 37 241 62 432 188 580 382 50 66 134 224 135 252 0 9 6 32 14 50 24 58 61 1019 40 1032 -6 3 -70 -53 -144 -126 -409 -397 -610 -587 -680 -640 -101 -76 -228 -97 -581 -97 -226 0 -280 3 -360 20 -97 20 -172 45 -224 73 -16 9 -39 20 -50 26 -40 19 -141 108 -186 164 -121 151 -175 339 -150 529 7 51 19 113 28 138 61 179 192 336 365 437 127 75 153 80 513 93 176 6 323 14 328 19 4 4 6 205 5 447 l-3 439 -230 1 c-126 1 -288 -4 -360 -11z"/>
+    </g>
+  </svg>
 </div>
